--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongodb": "^6.16.0",
     "mongodb-connection-string-url": "^3.0.2",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.2",
     "negotiator": "^1.0.0",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
