--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
     "encodeurl": "^2.0.0",
+    "env": "^0.0.2",
     "es-define-property": "^1.0.1",
     "es-errors": "^1.3.0",
     "es-object-atoms": "^1.1.1",
