--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
     "call-bound": "^1.0.4",
+    "cloudinary": "^1.41.3",
     "connect-mongo": "^5.1.0",
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
@@ -56,6 +57,7 @@
     "mongodb-connection-string-url": "^3.0.2",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "negotiator": "^1.0.0",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
